--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "Romain TRUCHI",
   "license": "ISC",
   "devDependencies": {
+    "json-loader": "^0.5.7",
     "webpack": "^3.8.1",
-    "webpack-dev-server": "^2.9.4"
+    "webpack-dev-server": "^2.9.4",
+    "yaml-loader": "^0.5.0"
   }
 }
