--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Romain TRUCHI",
   "license": "ISC",
   "devDependencies": {
+    "circular-dependency-plugin": "^4.2.1",
     "json-loader": "^0.5.7",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4",
