--- a/src/dict/scales.yml
+++ b/src/dict/scales.yml
@@ -3,12 +3,9 @@
   modes:
   - name: Pentatonic Major
     intervals: 1 2 3 5 6
-  - name: Pentatonic n°2 / Dorian(no3,13)
-    intervals: 1 2 4 5 ♭7
-  - name: Pentatonic n°3 / Phrygian(no5,9)
-    intervals: 1 ♭3 4 ♭6 ♭7
-  - name: Pentatonic n°4 / Mixolydian(no3,7)
-    intervals: 1 2 4 5 6
+  - null
+  - null
+  - null
   - name: Pentatonic Minor
     intervals: 1 ♭3 4 5 ♭7
 - name: Whole Tone
