--- a/src/dict/scales.yml
+++ b/src/dict/scales.yml
@@ -109,4 +109,4 @@
   intervals: ♭2 ♭2 ♭2 ♭2 ♭2 ♭2 ♭2 ♭2 ♭2 ♭2 ♭2 ♭2
   modes:
   - name: Chromatic
-    intervals: 1 ♭2 2 ♭3 3 4 ♯4 5 ♯5 ♭6 6 ♭7 7
+    intervals: 1 ♭2 2 ♭3 3 4 ♭5 5 ♭6 6 ♭7 7
