--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "dist/mujs.js",
   "scripts": {
     "dist": "webpack",
-    "start": "webpack-dev-server --open"
+    "start": "webpack-dev-server --open",
+    "test": "jest --watchAll"
   },
   "author": "Romain TRUCHI",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-env": "^1.6.1",
     "circular-dependency-plugin": "^4.2.1",
+    "jest": "^22.4.0",
     "json-loader": "^0.5.7",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.4",
